fixed css overflow

--- a/css/master.css
+++ b/css/master.css
@@ -8,6 +8,10 @@ body{
     background-size: cover;
 }
 
+body, html {
+    overflow-x: hidden;
+}
+
 li{
     padding: 0.2em;
 }
